[gd_scene load_steps=4 format=3 uid="uid://f57gc5m5ypty"]

[ext_resource type="Script" path="res://Scenes/CharacterLoader/character_loader.gd" id="1_b24qt"]
[ext_resource type="PackedScene" uid="uid://cr2ersq7g6q6f" path="res://Scenes/Spy/spy.tscn" id="2_tge6g"]
[ext_resource type="PackedScene" uid="uid://berq6fut4beji" path="res://Scenes/Agent/agent.tscn" id="3_n3qwu"]

[node name="CharacterLoader" type="Node"]
script = ExtResource("1_b24qt")
spy_scene = ExtResource("2_tge6g")
agent_scene = ExtResource("3_n3qwu")

[node name="Menu" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158008, 0.161688, 0.34792, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LoadSpy" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Load Spy"

[node name="LoadAgent" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Load Agent"

[node name="LoadBoth" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Load Both"

[connection signal="pressed" from="Menu/VBoxContainer/LoadSpy" to="." method="_on_load_spy_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/LoadAgent" to="." method="_on_load_agent_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/LoadBoth" to="." method="_on_load_both_pressed"]
